# lyte2d

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  LICENSE  Makefile  bld.cmd  build.cmd  build.sh  build.txt  cfg.cmd  changelog.txt  compile_flags.txt  config.cmd  config.sh  dev.cmd  docker_bash.sh  docker_fullbuild.sh  docker_make_buildimage.sh  docker_make_buildimage_macos.sh  fullbuild.sh  licenses_all.txt  local_build.cmd  local_build.sh  local_config.cmd  local_config.sh  lyte_readme.md  mingw.cmake  readme.md  readme.txt  version.txt
.github/workflows/: ci.yml
_dev/scractch/: core_physics.c  physics.lua  pressedkeys.lua
build_scripts/: Dockerfile  do_build.sh  do_config.sh  do_copy.sh  do_pack.sh  image_build.sh  manual_docker.sh  official_build.sh  readme.txt
dependencies/fontstash/: fontstash.h  sokol_fontstash.h  sokol_gl.h  stb_truetype.h
dependencies/isocline/: CMakeLists.txt  stack.yaml
dependencies/ode-0.16.2/: CHANGELOG.txt  CMakeLists.txt  Makefile.in  cmake_uninstall.cmake  config.h.cmake.in  configure  configure.ac  ode-config  ode-config-version.cmake  ode-config.cmake  ode.pc
dependencies/physfs/: CMakeLists.txt
docs/: changelog.md  dev.md  guide.html  guide.md  licenses.txt  lyte.d.tl  lyte.d.ts  lyte_readme.txt  readme.md  roadmap.md
documents/: lyte.d.tl  lyte.d.ts  lyte.lua  readme.md
etc/: Dockerfile  basics.cmake  local_build.cmd  local_config.cmd  local_docker_build_image.sh  local_docker_build_image_macos.sh  official_docker_run_fullbuild.sh  official_fullbuild.sh  readme.txt
examples/: hello1.lua  hello2.lua  image1.lua  image2.lua  readme.md  s01_hello.lua  s02_movement.lua  s03_music.lua  s04_soundfx.lua  s05_canvas.lua  s06_basic_shader.lua  s07_basic_shader2.lua  s08_shader_spinning_plus.lua  s09_shader_canvas.lua  shader.lua  shapes1.lua  test.lua
games/pongout/: app.lua  build.sh  config.lua
games/shoot1/: app.lua  game.fnl  main.fnl
luautf8/: lutf8lib.c
lyte/: CMakeLists.txt  version.txt
lyte/api/defs/: defs_lyte.lua  defs_lyte_core.lua  gen_api.sh  readme.md  readme.txt
lyte/api/defs/lib/: apidef.lua  defs_to_c.lua  defs_to_docstrings.lua  defs_to_inspectoutput.lua  defs_to_teal.lua  defs_to_typescript.lua  gen_api_luaboot.lua  gen_api_native.lua
lyte/api/defs/lib/tag/: tag_pp.lua
lyte/api/defs/output/: api.impl.c  api_generated.c  api_generated.h  lyte.d.tl  lyte.d.ts  lyte.lua
lyte/api/defs/output/code/: api_lyte_core.impl__EDIT__.c  api_lyte_core_gen.c  api_lyte_gen.lua
lyte/api/defs/output/dbg/: _lyte_core_tagtree.txt  _lyte_core_tree.fennel.fnl  _lyte_core_tree.inspect.lua  _lyte_tagtree.txt  _lyte_tree.fennel.fnl  _lyte_tree.inspect.lua
lyte/api/defs/output/typings/: lyte.d.tl  lyte.d.ts  lyte.lua
lyte/api/include/: api.enums.h  api_lyte_core_gen.h
lyte/api/src/: api.impl.c  api_generated.c  api_lyte_core.impl.c  api_lyte_core_gen.c
lyte/api_defs/: defs_lyte.lua  defs_lyte_core.lua  readme.md
lyte/api_defs/lib/: apidef.lua  defs_to_docstrings.lua  defs_to_teal.lua  gen_api_luaboot.lua  gen_api_native.lua
lyte/api_defs/lib/tag/: tag.lua
lyte/boot/: gen.sh  lyte_boot.lua  readme.md
lyte/boot/boot/: api_lyte_gen.lua  lyte_boot.lua
lyte/boot/boot/lyte_boot_libs/: lulpeg.lua  tl.lua
lyte/boot/bootlibs/: graphics.lua  libraries.lua
lyte/boot/include/: _boot_zip_generated.c
lyte/etc/: defs.lua  lyte.d.ts  lyte.defs.lua
lyte/src/: _boot_zip.generated.c  _boot_zip.h  api.c  api.impl.c  api_generated.c  api_generated.h  api_lyte_core.impl.c  api_lyte_core_gen.c  cfg.c  lyte.c  lyte.h  main.c  repl.c  repl.h
lyte2d/: CMakeLists.txt
lyte2d/boot/: lyte_boot.lua
lyte2d/boot/bootlibs/: classic.lua  graphics.lua  libraries.lua  tween.lua
lyte2d/etc/: lyte.d.tl  lyte.d.ts  lyte2d.html
lyte2d/src/: _boot_zip.h  api.c  cfg.c  lyte.c  lyte.h  repl.c
lyte_api/: gen.sh
lyte_api/defs/: Makefile  defs_lyte.lua  readme.txt
lyte_api/include/: api.enums.h  lyte_api.h
lyte_api/src/: api.impl.c  api_generated.c
lyte_base/: CMakeLists.txt
lyte_base/impl/: morebase.c
lyte_base/include/: mb_keyboardkeys.h  mb_types.h  morebase.h  moreconfig.h
lyte_boot/: gen.sh  lyte_boot.lua
lyte_boot/boot/: lyte_boot.lua
lyte_boot/include/: _boot_zip_generated.c
lyte_common/include/: api.enums.h  api_generated.h  map.h
lyte_common/src/: map.c  test.c
lyte_core/: CMakeLists.txt
lyte_core/html/: lyte.html
lyte_core/impl/: emsc.h  morebase.c
lyte_core/include/: core.h  emsc.h  lyte_core.h  lyte_emsc.h  lyte_enums.h  lyte_types.h  mb_gamepadaxes.h  mb_mousebuttons.h  morebase.h
lyte_core/src/: _internal.h  core_audio.c  core_filesystem.c  core_font.c  core_image.c  core_impls.c  core_input.c  core_lib_impls.c  core_loop.c  core_physics.c  core_shader.c  core_shapes.c  core_state.c  core_window.c  emsc.c  map.c  map.h  map_test.c  utf8encode.c  utf8encode.h
lyte_physics/: CMakeLists.txt
lyte_physics/include/: lyte_physics.h
lyte_physics/src/: physics.c
lyte_repl/include/: lyte.h  lyte_repl.h
lyte_repl/src/: cfg.c  lyte.c  nbchar.c  repl.c
lyte_wasm/html/: lyte.html
lyte_wasm/include/: lyte_emsc.h
lyte_wasm/src/: lyte_emsc.c
manual/: guide.md
morebase/: CMakeLists.txt
morebase/impl/: emsc.h  morebase.c
morebase/include/: mb_gamepadaxes.h  mb_gamepadbuttons.h  mb_joysticks.h  mb_keyboardkeys.h  mb_mousebuttons.h  mb_types.h  mb_utils.h  morebase.h  moreconfig.h
recycle/: morebase.c
recycle/include/: mb_gamepadbuttons.h  mb_joysticks.h  mb_utils.h
recycle/src/: _keys.inl
samples/: s01_hello.lua  s02_movement.lua  s03_music.lua  s04_soundfx.lua  s05_canvas.lua  s07_basic_shader2.lua  s08_shader_spinning_plus.lua  s09_shader_canvas.lua  s10_imagebatch.lua  s11_physics.lua
scratch/: capture.lua  lyte.lua  physics.lua
tests/manual/: Makefile  test3a.lua  test3b.fnl  textfile.lua
typings/: lyte.d.tl  lyte.d.ts  lyte.lua
webgen/: Makefile  html.lua
website/: gen_api.js  gen_examples.js  index.html  lyte.html  lyte.js  lyte.wasm  lyte2d.html  lyte2d.js  lyte2d.wasm
website_src/: Makefile  data.lua
websrc/: data.lua
(+83 files in other folders)
